tests/NormalTests/paczka1/fuzzy1/58638361.err
Error in line 1: geF S378 81,7
Error in line 3: xFvs A960 81,1
Error in line 17: X25rg7vzeU A960 22,9
Error in line 18: X25rg7vzeU S940 30,0
Error in line 16: XyqbAzTeGO S940 48,6
Error in line 23: XyqbAzTeGO A960 62,9
Error in line 31: 5GZ4JJn S940 62,5
Error in line 28: XyqbAzTeGO S27 58,9
Error in line 33: 5GZ4JJn S378 70,6
